# theAIE

./: .gitignore  LICENSE  README.md  Untitled.ipynb  docker-compose.yml  environment.yml  requirements.txt
aiecode/ch01/: README.md  mini_cli.py
aiecode/ch01/notebooks/: tae_capstone_wk1.ipynb
aiecode/ch02/: Dockerfile  README.md  best_model.pt  cli.py  fastapi_app.py
aiecode/ch02/notebooks/: aie_lineartegression.ipynb  aie_nn_intuition.ipynb  tae_capstone_wk2.ipynb  tae_manual_vs_autograd_intuition.ipynb  tae_review_questions_wk2.ipynb
aiecode/ch02/tests/: test_core.py
aiecode/ch03/: README.md
aiecode/ch03/attoLLM/: .gitignore  pyproject.toml  requirements.txt
aiecode/ch03/attoLLM/src/attollm/: hello.py
aiecode/ch03/attoLLM/src/attollm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aiecode/ch03/code/: env_check.py  (+2 more)
aiecode/ch04/Capstone/: README.md  pyproject.toml  requirements.txt
aiecode/ch04/Capstone/config/: resources.json  tools.json
aiecode/ch04/Capstone/data/memory/: memory.jsonl
aiecode/ch04/Capstone/data/runbooks/: k8s_crashloop.md  staging-api-crashloop.md
aiecode/ch04/Capstone/notebook/: incident_mcp_colab_demo.ipynb
aiecode/ch04/Capstone/src/incident_mcp/: __main__.py  agent_cli.py  client.py  server.py  server_cli.py  server_ws_cli.py  ws_client.py  ws_server.py
capstone01_optimisation/: README.md
capstone02_mlp/: README.md
capstone03_transformer_llm/: README.md
capstone04_mcp_agent/: README.md
notebooks/aiengineer_wk_1/: README.md  aie_week_1_scribbles.ipynb  tae_capstone_wk1.ipynb
notebooks/aiengineer_wk_2/: LinearRegression.ipynb  Untitled1.ipynb  Untitled2.ipynb  env_check.py  test_mini_cli.py
theaiengineer-curriculum/capstone01/: README.md  mini_cli.py
theaiengineer-curriculum/capstone02/: README.md  fastapi_app.py
theaiengineer-curriculum/capstone03/: README.md
(+140 files in other folders)
