[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-mcp"
version = "0.1.0"
description = "Incident Command Agent capstone: MCP-like JSON-RPC over stdio with tools/resources/memory/telemetry."
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "jsonschema>=4.22.0",
  "openai>=1.40.0",
  "anthropic>=0.34.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
